UI: improve footer and back-to-top button - Fixed footer layout and spacing - Rewrote back-to-top button in vanilla JS

--- a/html/catalog/view/theme/revolution/stylesheet/stylesheet.css
+++ b/html/catalog/view/theme/revolution/stylesheet/stylesheet.css
@@ -7414,7 +7414,7 @@ margin-top: 10px;
 .footer .footer_cfs {
 padding-top: 10px;
 padding-bottom: 5px;
-display: inline-block;
+display: flex;
 width: 100%;
 }
 .footer .not_dops_s + .footer_cfs {
